src/parser/snapshots/crochet__parser__types__tests__type_annotations-3.snap
---
source: src/parser/types.rs
expression: "parse_type(\"{x: number, y: number}\")"
---
Object(
    ObjectType {
        span: 0..22,
        props: [
            TProp {
                span: 1..10,
                key: Ident {
                    span: 1..2,
                    name: "x",
                },
                type_ann: Prim(
                    PrimType {
                        span: 4..10,
                        prim: Num,
                    },
                ),
            },
            TProp {
                span: 12..21,
                key: Ident {
                    span: 12..13,
                    name: "y",
                },
                type_ann: Prim(
                    PrimType {
                        span: 15..21,
                        prim: Num,
                    },
                ),
            },
        ],
    },
)
