src/parser/snapshots/crochet__parser__types__tests__type_annotations.snap
---
source: src/parser/types.rs
expression: "parse_type(\"Promise<number>\")"
---
TypeRef(
    TypeRef {
        span: 0..15,
        name: "Promise",
        type_params: Some(
            [
                Prim(
                    PrimType {
                        span: 8..14,
                        prim: Num,
                    },
                ),
            ],
        ),
    },
)
